src/sass/X/system_popups/activities_menu.sass
#activitiesMenuContainer
    position: absolute
    display: flex
    flex-flow: column wrap
    top: var(--topBar-height)
    left: 0px
    padding: 10px 0px
    width: 100vw
    height: calc(100vh - var(--topBar-height))
    overflow-y: none
    opacity: 0.9
    background-color: var(--color-accent-900)

    > .app_search
        margin-top: 30px
        flex: 0 0 auto
        display: flex
        margin: 30px auto
        justify-content: center

        > *
            margin: auto 0px

        > search_icon
            flex: 0 0 auto
            width: 20px
            height: 20px
            margin-right: -30px

        > input
            width: 300px
            font-size: 15px
            padding: 5px
            padding-left: 35px
            color: var(--color-text-light)
            text-align: left
            border: none
            border-radius: 50px
            background-color: var(--color-primary-300)

            &::placeholder
                color: var(--color-text-light)

    > .search_results_container
        max-width: 80%
        display: flex
        flex-flow: row nowrap
        justify-content: center
        align-content: center
        height: auto
        align-self: center
        border-radius: 10px
        padding: 0.4em
        column-gap: 0.4em
        background-color: var(--color-accent-400)
        .app
            display: flex
            flex-flow: column nowrap
            justify-content: center
            align-content: center
            border-radius: 10px
            text-align: center
            width: 9em
            height: 9em
            padding: 0.6em
            font-weight: 500
            background: none

            >*
                flex: 1 1 auto
            &:hover, &:focus
                background: var(--color-accent-900)
            .iconWrapper
                // padding: 0.3em
                display: flex
                flex-flow: column nowrap
                justify-self: center
                align-self: center
                justify-content: center
                align-content: center
                >img
                    width: 5em
                    height: 5em
                >span
                    font-size: 4em
            .app_name
                overflow: hidden
                white-space: nowrap
                text-overflow: ellipsis
                font-size: 0.9em
                height: 0em
    > .favorites,
        position: absolute
        width: auto
        margin: auto
        display: flex
        top: 50%
        transform: translate(0, -50%)
        border: 2px solid var(--color-primary-200)
        border-left: none
        border-radius: 0px 10px 10px 0px
        background: var(--color-accent-400)
        padding: 5px 0px
        display: flex
        flex-flow: column nowrap
        justify-content: center
        align-content: center

        >*
            height: 3em
            width: 3em
        .app
            text-overflow: ellipsis
            text-align: center
            display: flex
            border-radius: 10px
            flex: 1 1 auto
            font-weight: 500
            background: none
            font-size: 1.4em
            margin: 0.4em
            padding: 0.4em
            transition: background-color 0.1s ease-in-out
            &:hover, &:focus
                background: var(--color-primary-300)

            > img
                filter: brightness(0.5)
                width: 100%
            >span
                color: var(--color-text-medium)
                line-height: 0.7em
                font-size: 2.6em
                margin: auto
    .open_apps_preview_container
        background: var(--color-accent-400)
        box-shadow: 0px 0px 10px 10px var(--color-accent-400)
        -webkit-backdrop-filter: blur(5px)
        display: flex
        flex-flow: row wrap
        justify-self: center
        justify-content: center
        height: 85%
        overflow: hidden
        overflow-y: auto
        // margin: auto
        width: calc(100vw - 12.5em)
        margin: 6em 1em 0em 6.5em
        border-radius: 5px
        &:empty
            display: none
        > app_container
            filter: brightness(1)
            opacity: 1
            margin: 0em auto
            position: relative
            top: unset !important
            left: unset !important
            transform: scale(0.9)
            filter: brightness(1)
            box-shadow: none
            &:hover
                box-shadow: 0px 0px 3px 8px var(--color-accent-400)

